# trader

./: .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml  run_strategies.py
.github/workflows/: build-strategies.yml
trader/: base.py  config.py  openday.py  run_strategies.py  utils.py
